@@ -15,6 +15,6 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.10.0</string>
+	<string>1.10</string>
 </dict>
 </plist>
